# lab7sem1

./: CMakeLists.txt  input.txt
include/: fill_array.h  tasks.h
src/: fill_array.cpp  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
